plugins {
	id 'java'
	id 'io.freefair.lombok' version '4.1.6'
	id 'maven-publish'
	id "com.jfrog.bintray" version "1.8.4"
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
}

apply plugin: 'io.freefair.lombok'
apply plugin: 'idea'
apply plugin: 'io.spring.dependency-management'

group = 'engineering.everest.starterkit'
version = '0.0.8'
sourceCompatibility = '1.11'

repositories {
    mavenLocal()
    jcenter()
    maven {
        url  "https://dl.bintray.com/everestengineering/starterkit"
    }
}

test {
	useJUnitPlatform()
}

lombok {
    version = "1.18.12"
    generateLombokConfig.enabled = false
}

ext {
    storageVersion = '0.0.8'

    springBootVersion = '2.2.5.RELEASE'
    flapDoodleMongoVersion = '2.2.0'
    thumbnailatorVersion = '0.4.11'

    junitVersion = '5.6.0'
    mockitoVersion = '3.2.4'
    h2Version = '1.4.199'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
    }
}

dependencies {
    implementation "engineering.everest.starterkit:storage:${storageVersion}"

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "net.coobird:thumbnailator:${thumbnailatorVersion}"

    testImplementation 'org.springframework:spring-test'
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testRuntimeOnly "com.h2database:h2:${h2Version}"
}

bintray {
    user = System.getenv('BINTRAY_USER')
    key = System.getenv('BINTRAY_KEY')
    publications = ['maven']
    pkg {
        repo = 'starterkit'
        name = rootProject.name
        userOrg = 'everestengineering'
        licenses = ['Apache-2.0']
        vcsUrl = 'https://github.com/everestengineering/starterkit-media'
    }
    publish = true
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}
